<resources>
    <string name="app_name">Mobil Dunder mifflin</string>
    <string name="dunder_mifflin">Dunder Mifflin</string>
    <string name="control_asistencia">Control de Asistencia</string>
    <string name="usuario">Usuario</string>
    <string name="hint_usuario">michels</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="hint_password">••••••••</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="scranton_branch">Scranton Branch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indicaciones_foto">Sube una foto de tu rostro para tu crendencial digital y el directorio de la empresa.</string>
</resources>